[project]
name = "pokepackageshop"
version = "1.0.0"
description = "Tienda de pokemones, clasificados por tipo y detalles."
authors = [
    {name = "Marlet Palomera, marletramos10@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
